Restructured requests to only allow certain fields. Added Current Capacity to Cage. Added README.md.
