# controllers/cage_controller.go
@@ -12,15 +12,105 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// GetCages returns a list of cages.
-// @Summary Get a list of cages
-// @Description Retrieve a list of all cages.
-// @ID get-cages
+type PowerStatus string
+
+const (
+	PowerStatusActive PowerStatus = "ACTIVE"
+	PowerStatusDown   PowerStatus = "DOWN"
+)
+
+// CreateCageRequest represents the request to create a new cage.
+type CreateCageRequest struct {
+	Name        string      `json:"name" binding:"required" example:"Cage A"`
+	MaxCapacity int         `json:"max_capacity" binding:"required" example:"100"`
+	PowerStatus PowerStatus `json:"power_status" binding:"required" example:"ACTIVE"`
+}
+
+// CreateCage creates a new cage.
+// @Summary Create a new cage.
+// @Description Create a new cage in the database.
+// @ID create-cage
+// @Accept json
 // @Produce json
-// @Success 200 {array} cagemodels.Cage
-// @Router /cages [get]
-func GetCages(c *gin.Context) {
-	c.JSON(http.StatusOK, repository.Cages)
+// @Param cage body CreateCageRequest true "New Cage object"
+// @Success 201 {object} models.Cage
+// @Failure 400 {object} string "Bad Request"
+// @Router /cages [post]
+func CreateCage(c *gin.Context) {
+	var newCage cagemodels.Cage
+	if err := c.ShouldBindJSON(&newCage); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid cage data"})
+		return
+	}
+
+	txn := database.GetDB().Txn(true)
+	defer txn.Abort()
+
+	// Insert the cage into the go-memdb database
+	if err := repository.InsertCage(txn, &newCage); err != nil {
+
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	txn.Commit()
+	c.JSON(http.StatusCreated, newCage)
+}
+
+type UpdateCageRequest struct {
+	MaxCapacity *int                    `json:"max_capacity,omitempty"`
+	PowerStatus *cagemodels.PowerStatus `json:"power_status,omitempty"`
+}
+
+// UpdateCage updates an existing cage.
+// @Summary Update an existing cage
+// @Description Update an existing cage in the database.
+// @ID update-cage
+// @Accept json
+// @Produce json
+// @Param id path int true "Cage ID to update"
+// @Param cage body models.Cage true "Updated Cage object"
+// @Success 200 {object} models.Cage
+// @Failure 400 {object} string "Bad Request"
+// @Failure 404 {object} string "Cage Not Found"
+// @Router /cages/{id} [put]
+func UpdateCage(c *gin.Context) {
+	cageID := c.Param("id")
+	id, err := strconv.Atoi(cageID)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid cage ID"})
+		return
+	}
+
+	var updateRequest UpdateCageRequest
+	if err := c.ShouldBindJSON(&updateRequest); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid update data"})
+		return
+	}
+
+	// Get the DB
+	txn := database.GetDB().Txn(true)
+	defer txn.Abort()
+
+	// Find the existing cage
+	existingCage, err := repository.GetCage(txn, id)
+	if existingCage.ID == 0 {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Cage not found"})
+		return
+	}
+
+	// Update only the specified fields, if provided
+	if updateRequest.MaxCapacity != nil {
+		existingCage.MaxCapacity = *updateRequest.MaxCapacity
+	}
+	if updateRequest.PowerStatus != nil {
+		existingCage.PowerStatus = *updateRequest.PowerStatus
+	}
+
+	// Update the cage in the repository
+	repository.UpdateCage(*existingCage) // Pass the existingCage, not a pointer to it
+
+	c.JSON(http.StatusOK, existingCage)
 }
 
 // GetCageByID returns a specific cage by ID.
@@ -58,109 +148,6 @@ func GetCageByID(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, cage)
-}
-
-// CreateCage creates a new cage.
-// @Summary Create a new cage
-// @Description Create a new cage in the database.
-// @ID create-cage
-// @Accept json
-// @Produce json
-// @Param cage body cagemodels.Cage true "Cage object"
-// @Success 201 {object} models.Cage
-// @Failure 400 {object} string "Bad Request"
-// @Failure 500 {object} string "Internal Server Error"
-// @Router /cages [post]
-func CreateCage(c *gin.Context) {
-	var newCage cagemodels.Cage
-	if err := c.ShouldBindJSON(&newCage); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid cage data"})
-		return
-	}
-
-	txn := database.GetDB().Txn(true)
-	defer txn.Abort()
-
-	// Insert the cage into the go-memdb database
-	if err := repository.InsertCage(txn, &newCage); err != nil {
-
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	txn.Commit()
-	c.JSON(http.StatusCreated, newCage)
-}
-
-// UpdateCage updates an existing cage.
-// @Summary Update an existing cage
-// @Description Update an existing cage in the database.
-// @ID update-cage
-// @Accept json
-// @Produce json
-// @Param id path int true "Cage ID to update"
-// @Param cage body models.Cage true "Updated Cage object"
-// @Success 200 {object} models.Cage
-// @Failure 400 {object} string "Bad Request"
-// @Failure 404 {object} string "Cage Not Found"
-// @Router /cages/{id} [put]
-func UpdateCage(c *gin.Context) {
-	cageID := c.Param("id")
-	id, err := strconv.Atoi(cageID)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid cage ID"})
-		return
-	}
-
-	var updatedCage cagemodels.Cage
-	if err := c.ShouldBindJSON(&updatedCage); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid cage data"})
-		return
-	}
-
-	txn := database.GetDB().Txn(true)
-	defer txn.Abort()
-
-	cage, err := repository.GetCage(txn, id)
-	if cage == nil {
-		log.Printf("Error: %v", err)
-		c.JSON(http.StatusNotFound, gin.H{"error": "Cage not found"})
-		return
-	}
-
-	updatedCage.ID = cage.ID // Make sure ID remains the same
-	updatedCage = repository.UpdateCage(updatedCage)
-	c.JSON(http.StatusOK, updatedCage)
-}
-
-// DeleteCage deletes an existing cage by ID.
-// @Summary Delete an existing cage
-// @Description Delete an existing cage by ID from the database.
-// @ID delete-cage
-// @Param id path int true "Cage ID to delete"
-// @Success 200 {object} string "Cage deleted successfully"
-// @Failure 400 {object} string "Bad Request"
-// @Failure 404 {object} string "Cage Not Found"
-// @Router /cages/{id} [delete]
-func DeleteCage(c *gin.Context) {
-	cageID := c.Param("id")
-	id, err := strconv.Atoi(cageID)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid cage ID"})
-		return
-	}
-
-	txn := database.GetDB().Txn(true)
-	defer txn.Abort()
-
-	cage, err := repository.GetCage(txn, id)
-	if cage == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Cage not found"})
-		return
-	}
-
-	repository.DeleteCage(id)
-	c.JSON(http.StatusOK, gin.H{"message": "Cage deleted successfully"})
 }
 
 // AddDinosaurToCage adds a dinosaur to a cage.
@@ -234,47 +221,3 @@ func AddDinosaurToCage(c *gin.Context) {
 	log.Printf("Dinosaur ID: %d successfully added to Cage ID: %d", dinosaurID, cageID)
 	c.JSON(http.StatusOK, cage)
 }
-
-/*
-// ToggleCagePowerStatus toggles the power status of a cage.
-// @Summary Toggle the power status of a cage.
-// @Description Toggle the power status of a cage with checks.
-// @ID toggle-cage-power-status
-// @Accept json
-// @Produce json
-// @Param id path int true "Cage ID"
-// @Success 200 {object} cagemodels.Cage "Updated cage"
-// @Failure 400 {object} string "Bad Request"
-// @Failure 404 {object} string "Cage not found"
-// @Failure 500 {object} string "Internal Server Error"
-// @Router /cages/{id}/power [put]
-func ToggleCagePowerStatus(c *gin.Context) {
-	cageID, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid cage ID"})
-		return
-	}
-
-	// Get the cage by cage ID
-	txn := database.GetDB().Txn(true)
-	defer txn.Abort()
-	cage, err := repository.GetCage(txn, cageID)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve cage"})
-		return
-	}
-	if cage == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Cage not found"})
-		return
-	}
-
-	// Toggle the PowerStatus of the cage
-	if cage.PowerStatus == cagemodels.PowerStatusActive {
-		cage.PowerStatus = cagemodels.PowerStatusDown
-	} else {
-		cage.PowerStatus = cagemodels.PowerStatusActive
-	}
-
-	c.JSON(http.StatusOK, cage)
-}
-*/
