# docs/swagger.yaml
@@ -1,6 +1,45 @@
 definitions:
+  controllers.CreateCageRequest:
+    properties:
+      max_capacity:
+        example: 100
+        type: integer
+      name:
+        example: Cage A
+        type: string
+      power_status:
+        allOf:
+        - $ref: '#/definitions/controllers.PowerStatus'
+        example: ACTIVE
+    required:
+    - max_capacity
+    - name
+    - power_status
+    type: object
+  controllers.CreateDinosaurRequest:
+    properties:
+      name:
+        example: Dino
+        type: string
+      species:
+        example: Tyrannosaurus
+        type: string
+    required:
+    - name
+    - species
+    type: object
+  controllers.PowerStatus:
+    enum:
+    - ACTIVE
+    - DOWN
+    type: string
+    x-enum-varnames:
+    - PowerStatusActive
+    - PowerStatusDown
   models.Cage:
     properties:
+      current_capacity:
+        type: integer
       current_dinosaurs:
         items:
           $ref: '#/definitions/models.Dinosaur'
@@ -9,6 +48,8 @@ definitions:
         type: integer
       max_capacity:
         type: integer
+      name:
+        type: string
       power_status:
         $ref: '#/definitions/models.PowerStatus'
     type: object
@@ -47,31 +88,18 @@ info:
   contact: {}
 paths:
   /cages:
-    get:
-      description: Retrieve a list of all cages.
-      operationId: get-cages
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Cage'
-            type: array
-      summary: Get a list of cages
     post:
       consumes:
       - application/json
       description: Create a new cage in the database.
       operationId: create-cage
       parameters:
-      - description: Cage object
+      - description: New Cage object
         in: body
         name: cage
         required: true
         schema:
-          $ref: '#/definitions/models.Cage'
+          $ref: '#/definitions/controllers.CreateCageRequest'
       produces:
       - application/json
       responses:
@@ -83,11 +111,7 @@ paths:
           description: Bad Request
           schema:
             type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Create a new cage
+      summary: Create a new cage.
   /cages/{cage_id}/dinosaurs/{dinosaur_id}:
     post:
       consumes:
@@ -126,29 +150,6 @@ paths:
             type: string
       summary: Add a dinosaur to a cage.
   /cages/{id}:
-    delete:
-      description: Delete an existing cage by ID from the database.
-      operationId: delete-cage
-      parameters:
-      - description: Cage ID to delete
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: Cage deleted successfully
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Cage Not Found
-          schema:
-            type: string
-      summary: Delete an existing cage
     get:
       description: Retrieve a specific cage based on its ID.
       operationId: get-cage-by-id
@@ -178,39 +179,6 @@ paths:
           schema:
             type: string
       summary: Get a specific cage by ID
-    put:
-      consumes:
-      - application/json
-      description: Update an existing cage in the database.
-      operationId: update-cage
-      parameters:
-      - description: Cage ID to update
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Updated Cage object
-        in: body
-        name: cage
-        required: true
-        schema:
-          $ref: '#/definitions/models.Cage'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Cage'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Cage Not Found
-          schema:
-            type: string
-      summary: Update an existing cage
   /dinosaurs:
     post:
       consumes:
@@ -223,7 +191,7 @@ paths:
         name: dinosaur
         required: true
         schema:
-          $ref: '#/definitions/models.Dinosaur'
+          $ref: '#/definitions/controllers.CreateDinosaurRequest'
       produces:
       - application/json
       responses:
